WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223126
Fix interpolation of clip CSS property
https://bugs.webkit.org/show_bug.cgi?id=223126
Summary
Fix interpolation of clip CSS property
Antoine Quint
Reported
2021-03-12 10:26:47 PST
Fix interpolation of clip CSS property
Attachments
Patch
(43.82 KB, patch)
2021-03-12 10:29 PST
,
Antoine Quint
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(45.08 KB, patch)
2021-03-12 11:51 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2021-03-12 10:29:48 PST
Created
attachment 423059
[details]
Patch
EWS Watchlist
Comment 2
2021-03-12 10:30:48 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Antoine Quint
Comment 3
2021-03-12 11:51:32 PST
Created
attachment 423071
[details]
Patch
EWS
Comment 4
2021-03-13 12:00:28 PST
Committed
r274391
: <
https://commits.webkit.org/r274391
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423071
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-03-13 12:01:18 PST
<
rdar://problem/75396773
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug