Fix interpolation of clip CSS property https://bugs.webkit.org/show_bug.cgi?id=223126

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Import interpolation tests for clip. These tests pass completely
with 42 PASS results compared to prior to the source changes.

* web-platform-tests/css/css-masking/animations/clip-interpolation-expected.txt: Added.
* web-platform-tests/css/css-masking/animations/clip-interpolation.html: Added.

Source/WebCore:

Test: imported/w3c/web-platform-tests/css/css-masking/animations/clip-interpolation.html

While we already had support for interpolating the clip property, we had a couple of small
issues to fix to pass the entire WPT test dedicated to testing that feature:

    1. we must allow negative values
    2. we must serialize the value to "auto" if all four values are "auto"

* animation/CSSPropertyAnimation.cpp:
(WebCore::blendFunc):
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):
* css/CSSComputedStyleDeclaration.cpp:
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle):

LayoutTests:

Rebase a test that used the old, incorrect computed value for "clip" with
four "auto" values.

* fast/css/computed-clip-with-auto-rect-expected.txt:


Canonical link: https://commits.webkit.org/235258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274391 268f45cc-cd09-0410-ab3c-d52691b4dbfc